# Fact-Checker

./: README.md  pyproject.toml
scripts/: clean.py
src/: bot.py
